--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,2 +1,10 @@
 /**/
-
+body{
+  background-color: #191919;
+  background-image: url("../fonts/inicio.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.botao{
+  matgin-top: 20%;
+}
