javascript e index dos produtos

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,8 +3,7 @@ body{
   background-color: #191919;
   background-image: url("../fonts/inicio.png");
   background-repeat: no-repeat;
-  background-size: 100%;
-  background-attachment: fixed;
+  background-size: cover;
 }
 
 .botao{
